@@ -3,8 +3,9 @@ v2.5.8.0 - Bug fixed Reel/EDL window when two reels were loaded and clips could
 	 - Bug fixed EDL Edit window to support more than two reels.
 	 - Updated all platforms to use ffmpeg 2.2.
 	 - Bug fixed some movies not starting at first frame.
-	 - Bug fixed crash when loading of two or more EXRs simultaneously.
+	 - Bug fixed crash when loading two or more EXRs simultaneously.
 	 - Fixed red and blue dots in preview pictures.
+	 - Added missing detection for Real Media Format.
 v2.5.7.4 - Bug fixed ghosting of lines and text in grease marker's previous
 	   or next frames.
 	 - Updated all platforms to use OpenEXR 2.1.0.
